src/objects/DMAPP__Account_Political_Map__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Political_Maps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Linked_Map__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Linked Map</label>
        <referenceTo>DMAPP__Account_Political_Map__c</referenceTo>
        <relationshipName>Linked_Maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Number_Contacts__c</fullName>
        <label>Number Contacts</label>
        <summarizedField>DMAPP__Account_Political_Map_Contact__c.DMAPP__Completed__c</summarizedField>
        <summaryForeignKey>DMAPP__Account_Political_Map_Contact__c.DMAPP__Political_Map__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DMAPP__Primary_Map__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Map</label>
        <type>Checkbox</type>
    </fields>
    <label>Account Political Map</label>
    <nameField>
        <label>Map Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Political Maps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>